# CWGE

./: .gitignore  .gitmodules  CMakeLists.txt  EngineLib.sln  README.md
EngineLib/: Engine.h  EngineLib.vcxproj  EngineLib.vcxproj.filters  Shader.h  glad_R.cpp
EngineLib/Include/Glad/GladDeb/: glad.h
EngineLib/Include/Glad/GladRel/: glad.h
EngineLib/Include/Stb/: stb_image.h
EngineLib/Lib/CameraLib/: Debug_x64.lib  Release_x64.lib
EngineLib/Lib/EnvLib/: Debug_x64.lib  Release_x64.lib
EngineLib/Lib/GladReleaseX64/: GladReleaseX64.lib
EngineLib/Lib/ModelLib/: Debug_x64.lib
include/CWGE/: Camera.h  External.h  GLEnvironment.h  Model.h  Texture.h
src/: Camera.cpp  GLEnvironment.cpp  Model.cpp  Texture.cpp  glad_D.cpp
